--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/TaeKimJR/react-docgen-with-styles-handler#readme",
   "dependencies": {
-    "ast-types": "^0.13.1"
+    "ast-types": "^0.13.1",
+    "react-docgen": "^4.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
